added in last bit of functionality.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<p><label for="arriveby">And I need to be back by:</label><input name="arriveby" id="arriveby" type="time" value="07:00"></p>
 		<button ng-click="runapp.calcTime();"><i class="fa fa-clock-o"></i>&nbsp;When do I leave?</button>
 	</form>
-	
+	<div id="leaveby"></div>
 </body>
 </html>
 
